# qez-tornapi-codegen

./: Cargo.toml  README.md  git_push.sh
.openapi-generator/: FILES
docs/: Attack.md  AttackAttacker.md  AttackModifiers.md  AttackPlayer.md  AttackPlayerFaction.md  AttackPlayerSimplified.md  AttackSimplified.md  AttackSimplifiedAttacker.md  AttackingApi.md  BountiesApi.md  Bounty.md  Crimes20Api.md  FactionApi.md  FactionApplication.md  FactionApplicationStatusEnum.md  FactionApplicationUser.md  FactionApplicationUserStats.md  FactionApplicationsResponse.md  FactionAttackResult.md  FactionAttacksFullResponse.md  FactionAttacksResponse.md  FactionBasic.md  FactionBasicResponse.md  FactionChain.md  FactionChainReport.md  FactionChainReportAttacker.md  FactionChainReportAttackerAttacks.md  FactionChainReportAttackerRespect.md  FactionChainReportBonus.md  FactionChainReportDetails.md  FactionChainReportResponse.md  FactionChainsResponse.md  FactionCrime.md  FactionCrimeReward.md  FactionCrimeRewardItem.md  FactionCrimeRewards.md  FactionCrimeSlot.md  FactionCrimeSlotItemRequirement.md  FactionCrimeSlotUser.md  FactionCrimeStatusEnum.md  (+295 more)
src/apis/: attacking_api.rs  bounties_api.rs  configuration.rs  crimes20_api.rs  faction_api.rs  forum_api.rs  hall_of_fame_api.rs  item_market_api.rs  logs_api.rs  lookup_api.rs  market_api.rs  mod.rs  racing_api.rs  stable_api.rs  torn_api.rs  unstable_api.rs  user_api.rs
src/models/: _faction_get_200_response.rs  _forum_get_200_response.rs  _market_get_200_response.rs  _racing_get_200_response.rs  _torn_get_200_response.rs  attack.rs  (+315 more)
